--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: json5_model
 description: Gernerating Dart model class from Json files with one command.
 version: 1.0.0
-homepage: https://github.com/flutterchina/json_model
-repository: https://github.com/flutterchina/json_model
+homepage: https://github.com/wilinz/json5_model
+repository: https://github.com/wilinz/json5_model
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.14.0 <4.0.0"
 
 dependencies:
   args: ^2.1.1
@@ -14,9 +14,9 @@ dependencies:
   logging: ^1.0.1
   io: ^1.0.3
   build_runner_core: ^7.0.0
-  build_runner: ^2.0.0
+  build_runner: ^2.3.0
   path: ^1.8.0
   json5: ^0.8.0
 dev_dependencies:
   test: ^1.5.1
-  lint: ^1.0.0
+  lint: ^2.0.0
