--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,12 +3,17 @@ description: Gernerate model class from Json files.
 version: 0.0.1
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
+  copy_with_extension: ^6.0.1
+  autoequal: ^0.9.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   json5_model:
     path: ../
-  json_serializable: ^6.5.4
+  json_serializable: ^6.9.5
+  copy_with_extension_gen: ^6.0.1
+  autoequal_gen: ^0.9.5
