--- a/example/jsons/json5/partial_fields.json5
+++ b/example/jsons/json5/partial_fields.json5
@@ -1,17 +1,40 @@
-[
-  {
-    "id": 1,
-    "name": "Alice",
-    "email": "alice@example.com"
-  },
-  {
-    "id": 2,
-    "name": "Bob",
-    "phone": "+123456789"
-  },
-  {
-    "id": 3,
-    "name": "Charlie",
-    "email": null
-  }
-]
+{
+  a: [
+    {
+      "id": 1,
+      "name": "Alice",
+      "email": "alice@example.com"
+    },
+    {
+      "id": 2,
+      "name": "Bob",
+      "phone": "+123456789"
+    },
+    {
+      "id": 3,
+      "name": "Charlie",
+      "email": null
+    },
+    null
+  ],
+  b: [
+    "",
+    "",
+    null
+  ],
+  c: [
+    0,
+    1.5,
+    null
+  ],
+  d: [
+    0,
+    1,
+    null
+  ],
+  f: [
+    0,
+    1,
+    2,
+  ]
+}
