--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ build/
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 pubspec.lock
 /example/pubspec.lock
+/example/lib/test/json/json5/
