feat: migration for the old version of autoequal
This commit introduces a migration feature for the old version of `autoequal`. It includes the following changes:

-   Added the `migr-autoequal` flag and `migr-autoequal-back` option to the command-line arguments.
-   Added a function to compress the entire source directory with a timestamp into a zip file before migration.
-   Added a function to perform the migration by:
    -   Replacing `@Autoequal()` and `@autoequal` with `@generateProps`.
    -   Replacing `@IgnoreAutoequal()` with `@ignore`.
    -   Replacing `@IncludeAutoequal()` with `@include`.
    -   Updating import statements from `package:autoequal/autoequal.dart` to `package:equatable_annotations/equatable_annotations.dart`.
-   Added backup functionality to store the original source directory as a zip file in the specified backup directory before migration.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,12 +8,13 @@ environment:
 dependencies:
   json_annotation: ^4.9.0
   copy_with_extension: ^6.0.1
-  autoequal: ^0.9.1
   equatable: ^2.0.7
+  equatable_annotations: ^1.0.1
 
 dev_dependencies:
   json5_model:
     path: ../
   json_serializable: ^6.9.5
   copy_with_extension_gen: ^6.0.1
-  autoequal_gen: ^0.9.5
+  equatable_gen: ^1.0.4
+  build_runner: ^2.4.15
